--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "snode",
-  "version": "1.0.0",
-  "description": "second project with node ",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Developer: Eliezer Moo",
-  "license": "ISC",
-  "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "colors": "^1.4.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3"
-  }
+    "name": "snode",
+    "version": "1.0.0",
+    "description": "second project with node ",
+    "main": "app.js",
+    "scripts": {
+        "start": "nodemon src/app",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Developer: Eliezer Moo",
+    "license": "ISC",
+    "dependencies": {
+        "@hapi/joi": "^17.1.1",
+        "bcrypt": "^5.0.1",
+        "colors": "^1.4.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.2.10",
+        "morgan": "^1.10.0"
+    }
 }
