--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Developer: Eliezer Moo",
     "license": "ISC",
     "dependencies": {
+        "@hapi/boom": "^9.1.4",
         "@hapi/joi": "^17.1.1",
         "bcrypt": "^5.0.1",
         "colors": "^1.4.0",
