--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.10",
+        "mongoose-autopopulate": "^0.16.1",
         "morgan": "^1.10.0"
     }
 }
