--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "colors": "^1.4.0",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "faker": "^5.5.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.10",
         "mongoose-autopopulate": "^0.16.1",
