--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "second project with node ",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon index",
+        "start": "node index",
+        "dev": "nodemon index",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
